# kafka-rust-clone

./: Cargo.toml
src/: lib.rs  main.rs
src/adapters/incoming/: kafka_protocol_parser.rs  tcp_adapter.rs
src/adapters/incoming/protocol/: constants.rs  mod.rs  utils.rs
src/adapters/incoming/protocol/messages/: common.rs  request.rs  response.rs
src/adapters/outgoing/: README.md  disk_store.rs  kraft_metadata_store.rs  memory_store.rs  mod.rs
src/adapters/outgoing/protocol/: kraft_record.rs
src/application/: broker.rs  error.rs  mod.rs
src/config/: app_config.rs  mod.rs  test.rs  test_config.rs
src/domain/: error.rs  message.rs  mod.rs  protocol.rs
src/ports/incoming/: message_handler.rs  mod.rs  protocol_parser.rs
src/ports/outgoing/: message_store.rs  metadata_store.rs  mod.rs
