[package]
name = "kafka-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"
bytes = "1.5.0"
thiserror = "1.0.32"
tokio = { version = "1.23.0", features = ["full"] }
async-trait = "0.1.73"
uuid = { version = "1.6.1", features = ["v4"] }
tempfile = "3.10.0"

[lib]
name = "kafka_starter"
path = "src/lib.rs"

[[bin]]
name = "codecrafters-kafka"
path = "src/main.rs"
